SZ 11/21 supplementary material

--- a/main.tex
+++ b/main.tex
@@ -14,54 +14,77 @@
 \usepackage{epigraph}
 \usepackage[backgroundcolor=Apricot]{todonotes}
 \usepackage{hyperref}
+\usepackage{csquotes}
 
-%\usepackage{biblatex}
-%\addbibresource{bibliography.bib}
-%\addbibresource{vakcinace.bib}
-%\addbibresource{covid19_czechia_paper.bib}
-%\addbibresource{bib-ro.bib}
-%\usepackage{csquotes}
+%\usepackage{hyphenat}
+%\hyphenation{vý-cho-do-asij-ský-mi}
+
+\usepackage[style=authoryear]{biblatex}
+% tady se zamenuji "()" za "[]"
+\makeatletter
+\newrobustcmd*{\parentexttrack}[1]{%
+  \begingroup
+  \blx@blxinit
+  \blx@setsfcodes
+  \blx@bibopenparen#1\blx@bibcloseparen
+  \endgroup}
+\AtEveryCite{%
+  \let\parentext=\parentexttrack%
+  \let\bibopenparen=\bibopenbracket%
+  \let\bibcloseparen=\bibclosebracket}
+\makeatother
+% tady se zamenuje prikaz \cite (bez zavorek) za \parencite (se zavorkami)
+\let\cite\parencite
+%\addbibresource{monografie-komplet.bib}
+\addbibresource{monografie-final.bib}
+\usepackage{csquotes}
+
+
+
+
 
 \begin{document}
 
-\title{Rok s pandemií covid-19 -- reflexe v poločase}
-\author{Bisop}
+\title{Odborná příloha k Situační zprávě BISOP 3.11.2020}
+
+
+
+%\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{verze pro externí oponenty}}
+%\author{Bisop}
 \maketitle
+
+V této přiloze se nachází vybrané preprinty příspěvků konference Poučení z pandemie COVID-19, konané 16.6.2021 v Praze. Příspěvky prošly interní oponenturou v rámci BISOP.
 
 
 %\subfile{prispevky/065-Nekolik_poznamek/main.tex}
 
 
-\subfile{prispevky/000-uvod/main.tex}
+%\subfile{prispevky/000-uvod/main.tex}
 
 \subfile{prispevky/010-Co_se_vi/main.tex}
-\subfile{prispevky/030-Co_na_cem_zavisi/main.tex}
-\subfile{prispevky/040-Prirozene_experimenty/main.tex}
-\subfile{prispevky/060-Typy_modelu/main.tex}
-\subfile{prispevky/160-Agentni_modely/main.tex}
-\subfile{prispevky/050-Grafy_kontaktu/main.tex}
-\subfile{prispevky/090-Evaluace_politik/main.tex}
-\subfile{prispevky/100-Skoly/main.tex}
+%\subfile{prispevky/030-Co_na_cem_zavisi/main.tex}
+%\subfile{prispevky/040-Prirozene_experimenty/main.tex}
+%\subfile{prispevky/060-Typy_modelu/main.tex}
+%\subfile{prispevky/160-Agentni_modely/main.tex}
+%\subfile{prispevky/050-Grafy_kontaktu/main.tex}
+%\subfile{prispevky/090-Evaluace_politik/main.tex}
+%\subfile{prispevky/100-Skoly/main.tex}
+%\subfile{prispevky/070-Ucinnost_ockovani/main.tex}
+%\subfile{prispevky/080-Logistika_ockovani/main.tex}
+%\subfile{prispevky/065-Nekolik_poznamek/main.tex}
+%\subfile{prispevky/120-Trasovani/main.tex}
+%\subfile{prispevky/130-Compliance/main.tex}
+%\subfile{prispevky/110-Ekonomicke_aspekty/main.tex}
+%\subfile{prispevky/150-Zmeny_chovani/main.tex}
+%\subfile{prispevky/085-Nove_vyzvy/main.tex}
 
 
-\subfile{prispevky/070-Ucinnost_ockovani/main.tex}
-\subfile{prispevky/080-Logistika_ockovani/main.tex}
-\subfile{prispevky/065-Nekolik_poznamek/main.tex}
+%\bibliographystyle{apalike}
+%\bibliography{bibliography,vakcinace,covid19_czechia_paper,bib-ro} 
 
 
-\subfile{prispevky/120-Trasovani/main.tex}
-\subfile{prispevky/130-Compliance/main.tex}
 
-\subfile{prispevky/110-Ekonomicke_aspekty/main.tex}
-\subfile{prispevky/150-Zmeny_chovani/main.tex}
-\subfile{prispevky/085-Nove_vyzvy/main.tex}
-
-
-\bibliographystyle{apalike}
-\bibliography{bibliography,vakcinace,covid19_czechia_paper,bib-ro} 
-
-% \printbibliography
-
+\printbibliography
 \tableofcontents
 
 \end{document}
