--- a/prispevky/150-Zmeny_chovani/main.tex
+++ b/prispevky/150-Zmeny_chovani/main.tex
@@ -76,16 +76,16 @@ Více informací a výsledky pro skupiny obyvatel viz: \url{https://zivotbehempa
 \label{Socialni_aktivity}
 
 \paragraph{Sociální aktivity.} Vývoj reprodukčního čísla epidemie podle analýz BISOP výrazně závisí na tom, jak se vyvíjí reportovaný počet mezilidských kontaktů ve výzkumu Život během pandemie.\footnote{Viz analýzu BISOP z 22. února 2021
-\url{https://www.bisop.eu/otazka-otazek-existuje-stale-nadeje-na-ucinne-a-relativne-rychle-reseni/}} A počet těchto kontaktů naopak úzce souvisí se sociálními aktivitami, které se proměňovaly v závislosti na protiepidemických opatřeních, ale také v souvislosti s mírou obav a ochotou daná opatření dodržovat (compliance).
+\url{https://www.bisop.eu/otazka-otazek-existuje-stale-nadeje-na-ucinne-a-relativne-rychle-reseni/}} A počet těchto kontaktů naopak úzce souvisí se sociálními aktivitami, které se proměňovaly v závislosti na protiepidemických opatřeních, ale také v souvislosti s mírou obav a ochotou daná opatření dodržovat (compliance).
 
-Výzkum Život během pandemie sleduje celkem 13 aktivit, které se v různých částech epidemie výrazně měnily. Hrubě je lze rozdělit na tři typy. Zaprvé volnočasové aktivity, které ve většině roku takřka vynulovaly přímé restrikce. Zadruhé rodinné aktivity a cestování, jejichž vývoj výrazně závisel na omezeních volného pohybu a míře obav, a měnil se tedy plynuleji. A zatřetí využívání služeb.
+Výzkum Život během pandemie sleduje celkem 13 aktivit, které se v různých částech epidemie výrazně měnily. Hrubě je lze rozdělit na tři typy. Zaprvé volnočasové aktivity, které ve většině roku takřka vynulovaly přímé restrikce. Zadruhé rodinné aktivity a cestování, jejichž vývoj výrazně závisel na omezeních volného pohybu a míře obav, a měnil se tedy plynuleji. A zatřetí využívání služeb.
 
-V další volnočasové skupině činností je epidemiomologicky nezanedbatelnou aktivitou například návštěva restaurací. V létě roku 2020 mezi první a druhou vlnou epidemie do nich týdně chodila téměř polovina respondentů. Při oficiálně zavřených restauracích zhruba 3\,\% respondentů deklarovalo, že do nich chodí. Toto číslo může být ovlivněno chybou (chybné zaškrtnutí v dotazníku) i omezenou ochotou přiznat nedovolenou aktivitu. Ale celkově ukazuje, že zřejmě výrazně přeceňujeme vliv medializovaného porušování omezení služeb – jsou sice předmětem dílčího porušování, ale reálně dochází ke zhruba 95\% redukci jejich využívání i souvisejících kontaktů. Je vidět, že v době mezi vlnami pandemie návštěvy restaurací stoupají postupně – zpočátku je ještě redukují obavy, jiný životní rytmus či zhoršená ekonomická situace respondentů a trvá 1,5 až 2 měsíce od otevření hospod, než se navrátí na původní intenzitu návštěv.
+V další volnočasové skupině činností je epidemiomologicky nezanedbatelnou aktivitou například návštěva restaurací. V létě roku 2020 mezi první a druhou vlnou epidemie do nich týdně chodila téměř polovina respondentů. Při oficiálně zavřených restauracích zhruba 3\% respondentů deklarovalo, že do nich chodí. Toto číslo může být ovlivněno chybou (chybné zaškrtnutí v dotazníku) i omezenou ochotou přiznat nedovolenou aktivitu. Ale celkově ukazuje, že zřejmě výrazně přeceňujeme vliv medializovaného porušování omezení služeb – jsou sice předmětem dílčího porušování, ale reálně dochází ke zhruba 95\% redukci jejich využívání i souvisejících kontaktů. Je vidět, že v době mezi vlnami pandemie návštěvy restaurací stoupají postupně – zpočátku je ještě redukují obavy, jiný životní rytmus či zhoršená ekonomická situace respondentů a trvá 1,5 až 2 měsíce od otevření hospod, než se navrátí na původní intenzitu návštěv.
 
-Ve druhé – sociální – skupině jsou klíčovou aktivitou návštěvy rodiny či přátel. V první vlně na jaře 2020 došlo k jejich velkému poklesu – s rodinou a známými se stýkalo jen 33\,\% respondentů. Postupně tato hodnota rostla až na 69\,\%. V dalších vlnách epidemie
-již nikdy lidé neomezili návštěvy jako na jaře 2020 – na vrcholu druhé vlny epidemie navštěvovalo rodinu či známé týdně 46\,\%, ale již v prosinci návštěvy velmi rostly. V lednové třetí vlně návštěvy poklesly jen na 53\,\% a na vrcholu 4. vlny ve druhém březnovém týdnu návštěvy přiznávalo 39\,\% respondentů. Poslední vlna koronaviru se tím lišila od těch podzimních, což může být důsledek výraznějších obav, ale také většího omezení volného pohybu (přes hranice obcí a okresů).
+Ve druhé – sociální – skupině jsou klíčovou aktivitou návštěvy rodiny či přátel. V první vlně na jaře 2020 došlo k jejich velkému poklesu – s rodinou a známými se stýkalo jen 33\% respondentů. Postupně tato hodnota rostla až na 69\%. V dalších vlnách epidemie
+již nikdy lidé neomezili návštěvy jako na jaře 2020 – na vrcholu druhé vlny epidemie navštěvovalo rodinu či známé týdně 46\%, ale již v prosinci návštěvy velmi rostly. V lednové třetí vlně návštěvy poklesly jen na 53\% a na vrcholu 4. vlny ve druhém březnovém týdnu návštěvy přiznávalo 39\% respondentů. Poslední vlna koronaviru se tím lišila od těch podzimních, což může být důsledek výraznějších obav, ale také většího omezení volného pohybu (přes hranice obcí a okresů).
 
-Využívání služeb se v rámci epidemie měnilo zřejmě nejméně. Vidíme výrazné proměny používání hromadné dopravy – v prvním lockdownu roku 2020 MHD jezdilo jen 10\,\% lidí, v létě mimo epidemii 33\,\% a v dalších fázích epidemie 20 až 30\,\%. Kromě první vlny epidemie jsou ale výkyvy ve využívání hromadné dopravy spíše omezené. Data velmi silně korelují s údaji o mobilitě typu Public transport z přímého měření Google Mobility Report (GMR). Porovnání GMR napříč státy také ukazuje, že oproti například Portugalsku a Velké Británii, které v zimě 2021 také prošly výraznou vlnou viru varianty B-117 (tzv. britská varianta), klesla v ČR mobilita daná využíváním veřejné dopravy méně. To je dáno mimo jiné tím, že využívání veřejné dopravy výrazně souvisí s dojížďkou do práce. A právě omezené využívání home office je jedním ze specifik epidemie v ČR.
+Využívání služeb se v rámci epidemie měnilo zřejmě nejméně. Vidíme výrazné proměny používání hromadné dopravy – v prvním lockdownu roku 2020 MHD jezdilo jen 10\% lidí, v létě mimo epidemii 33\% a v dalších fázích epidemie 20 až 30\%. Kromě první vlny epidemie jsou ale výkyvy ve využívání hromadné dopravy spíše omezené. Data velmi silně korelují s údaji o mobilitě typu Public transport z přímého měření Google Mobility Report (GMR). Porovnání GMR napříč státy také ukazuje, že oproti například Portugalsku a Velké Británii, které v zimě 2021 také prošly výraznou vlnou viru varianty B-117 (tzv. britská varianta), klesla v ČR mobilita daná využíváním veřejné dopravy méně. To je dáno mimo jiné tím, že využívání veřejné dopravy výrazně souvisí s dojížďkou do práce. A právě omezené využívání home office je jedním ze specifik epidemie v ČR.
 
 \begin{figure}[ht]
     \centering
@@ -95,7 +95,7 @@ Využívání služeb se v rámci epidemie měnilo zřejmě nejméně. Vidíme 
 \end{figure}
 
 
-Více informací a výsledky pro skupiny obyvatel viz: \url{https://zivotbehempandemie.cz/socialni-aktivity}
+Více informací a výsledky pro skupiny obyvatel jsou uvedeny na stránkách: \url{https://zivotbehempandemie.cz/socialni-aktivity}
 
 
 %\subsection*{Využívání home office}
