Verze pro recenzenty - biblatex

--- a/main.tex
+++ b/main.tex
@@ -45,38 +45,35 @@
 
 \begin{document}
 
-\title{Odborná příloha k Situační zprávě BISOP 3.11.2020}
 
 
 
-%\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{verze pro externí oponenty}}
-%\author{Bisop}
+\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{verze pro externí oponenty}}
+\author{Bisop}
 \maketitle
 
-V této přiloze se nachází vybrané preprinty příspěvků konference Poučení z pandemie COVID-19, konané 16.6.2021 v Praze. Příspěvky prošly interní oponenturou v rámci BISOP.
+
+\subfile{prispevky/065-Nekolik_poznamek/main.tex}
 
 
-%\subfile{prispevky/065-Nekolik_poznamek/main.tex}
-
-
-%\subfile{prispevky/000-uvod/main.tex}
+\subfile{prispevky/000-uvod/main.tex}
 
 \subfile{prispevky/010-Co_se_vi/main.tex}
-%\subfile{prispevky/030-Co_na_cem_zavisi/main.tex}
-%\subfile{prispevky/040-Prirozene_experimenty/main.tex}
-%\subfile{prispevky/060-Typy_modelu/main.tex}
-%\subfile{prispevky/160-Agentni_modely/main.tex}
-%\subfile{prispevky/050-Grafy_kontaktu/main.tex}
-%\subfile{prispevky/090-Evaluace_politik/main.tex}
-%\subfile{prispevky/100-Skoly/main.tex}
-%\subfile{prispevky/070-Ucinnost_ockovani/main.tex}
-%\subfile{prispevky/080-Logistika_ockovani/main.tex}
-%\subfile{prispevky/065-Nekolik_poznamek/main.tex}
-%\subfile{prispevky/120-Trasovani/main.tex}
-%\subfile{prispevky/130-Compliance/main.tex}
-%\subfile{prispevky/110-Ekonomicke_aspekty/main.tex}
-%\subfile{prispevky/150-Zmeny_chovani/main.tex}
-%\subfile{prispevky/085-Nove_vyzvy/main.tex}
+\subfile{prispevky/030-Co_na_cem_zavisi/main.tex}
+\subfile{prispevky/040-Prirozene_experimenty/main.tex}
+\subfile{prispevky/060-Typy_modelu/main.tex}
+\subfile{prispevky/160-Agentni_modely/main.tex}
+\subfile{prispevky/050-Grafy_kontaktu/main.tex}
+\subfile{prispevky/090-Evaluace_politik/main.tex}
+\subfile{prispevky/100-Skoly/main.tex}
+\subfile{prispevky/070-Ucinnost_ockovani/main.tex}
+\subfile{prispevky/080-Logistika_ockovani/main.tex}
+\subfile{prispevky/065-Nekolik_poznamek/main.tex}
+\subfile{prispevky/120-Trasovani/main.tex}
+\subfile{prispevky/130-Compliance/main.tex}
+\subfile{prispevky/110-Ekonomicke_aspekty/main.tex}
+\subfile{prispevky/150-Zmeny_chovani/main.tex}
+\subfile{prispevky/085-Nove_vyzvy/main.tex}
 
 
 %\bibliographystyle{apalike}
